--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2&family=Lato&display=swap"
       rel="stylesheet"
     />
-    <title>Electriqe</title>
+    <title>Bitwrap</title>
   </head>
   <body>
     <main
@@ -24,7 +24,7 @@
         alt="Electriqe Logo"
         class="rounded-full w-28 h-28 shadow-2xl hover:scale-125 transition-all ease-in-out delay-200"
       />
-      <span class="text-5xl font-bold">Electriqe</span>
+      <span class="text-5xl font-bold">Bitwrap</span>
       <span class="text-2xl font-lato font-bold underline underline-offset-8"
         >Coming Soon</span
       >
